--- a/.github/workflows/opencode-workers-v2.yml
+++ b/.github/workflows/opencode-workers-v2.yml
@@ -25,8 +25,8 @@ jobs:
   get-ready-tasks:
     runs-on: ubuntu-latest
     outputs:
-      task_ids: ${{ steps.ready.outputs.task_ids }}
-      task_count: ${{ steps.ready.outputs.task_count }}
+      task_ids: ${{ steps.get-ready-tasks.outputs.task_ids }}
+      task_count: ${{ steps.get-ready-tasks.outputs.task_count }}
     steps:
       - name: Generate GitHub App token
         id: app-token
@@ -68,6 +68,7 @@ jobs:
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
 
       - name: Configure Beads (read-only mode)
+        id: get-ready-tasks
         run: |
           # Initialize beads with sync branch config
           sed -i 's/^# sync-branch:.*/sync-branch: "beads-sync"/' .beads/config.yaml || echo 'sync-branch: "beads-sync"' >> .beads/config.yaml
@@ -91,12 +92,12 @@ jobs:
           echo "DEBUG: task_count output is: '$TASK_COUNT'"
 
       - name: Post wave start comment
-        if: needs.get-ready-tasks.outputs.task_count != '0'
+        if: steps.get-ready-tasks.outputs.task_count != '0'
         uses: actions/github-script@v8
         with:
           github-token: ${{ steps.app-token.outputs.token }}
           script: |
-            const taskIds = JSON.parse('${{ needs.get-ready-tasks.outputs.task_ids }}');
+            const taskIds = JSON.parse('${{ steps.get-ready-tasks.outputs.task_ids }}');
             const count = taskIds.length;
 
             await github.rest.issues.createComment({
