--- a/.gitattributes
+++ b/.gitattributes
@@ -2,3 +2,6 @@
 # Use bd merge for beads JSONL files
 
 # Use bd merge for beads JSONL files
+
+# Use bd merge for beads JSONL files
+.beads/issues.jsonl merge=beads
