--- a/.github/workflows/opencode-workers-v2.yml
+++ b/.github/workflows/opencode-workers-v2.yml
@@ -356,6 +356,7 @@ jobs:
               continue
             }
             
+            # Attempt merge
             if git merge origin/$TASK_BRANCH --no-ff -m "merge: task $TASK_ID"; then
               echo "✅ Merged $TASK_ID successfully"
               MERGED_COUNT=$((MERGED_COUNT + 1))
@@ -369,8 +370,18 @@ jobs:
                 git add "$FILE"
               done
               
+              # Also stage any other uncommitted changes
+              git add -A
+              
               git commit -m "merge: task $TASK_ID (auto-resolved conflicts)"
               MERGED_COUNT=$((MERGED_COUNT + 1))
+            fi
+            
+            # After each merge, ensure working tree is clean
+            if [ -n "$(git status --porcelain)" ]; then
+              echo "🧹 Cleaning up uncommitted changes after merge..."
+              git add -A
+              git commit -m "merge: task $TASK_ID (additional changes)"
             fi
           done
 
