--- a/.github/workflows/opencode.yml
+++ b/.github/workflows/opencode.yml
@@ -78,26 +78,19 @@ jobs:
           token: ${{ steps.app-token.outputs.token }}
           fetch-depth: 0
 
+      - name: Setup mise
+        uses: jdx/mise-action@v2
+
       - name: Setup tools
         env:
           GH_TOKEN: ${{ steps.app-token.outputs.token }}
         run: |
           mkdir -p "$HOME/.local/bin"
           
-          # Install mise
-          curl -fsSL https://mise.run | sh
-          echo "$HOME/.local/share/mise/bin" >> $GITHUB_PATH
-          
           # Install beads manually (mise doesn't have it)
           gh release download --repo steveyegge/beads --pattern 'beads_*_linux_amd64.tar.gz' --output /tmp/beads.tar.gz
           tar -xzf /tmp/beads.tar.gz -C /tmp && mv /tmp/bd "$HOME/.local/bin/" && rm -rf /tmp/beads.tar.gz /tmp/bd
           echo "$HOME/.local/bin" >> $GITHUB_PATH
-          
-          # Install tools with mise
-          "$HOME/.local/share/mise/bin/mise" install
-          
-          # Add mise shims to PATH
-          echo "$HOME/.local/share/mise/shims" >> $GITHUB_PATH
           
           sed -i 's/^# sync-branch:.*/sync-branch: "beads-sync"/' .beads/config.yaml || echo 'sync-branch: "beads-sync"' >> .beads/config.yaml
           "$HOME/.local/bin/bd" init
@@ -268,17 +261,8 @@ jobs:
           token: ${{ steps.app-token.outputs.token }}
           fetch-depth: 0
 
-      - name: Setup tools
-        run: |
-          # Install mise
-          curl -fsSL https://mise.run | sh
-          echo "$HOME/.local/share/mise/bin" >> $GITHUB_PATH
-          
-          # Install tools with mise
-          "$HOME/.local/share/mise/bin/mise" install
-          
-          # Add mise shims to PATH
-          echo "$HOME/.local/share/mise/shims" >> $GITHUB_PATH
+      - name: Setup mise
+        uses: jdx/mise-action@v2
 
       - name: Setup git identity
         run: |
